# social-data-bridge

./: .env  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.jobs  Dockerfile.mcp-mongo  Dockerfile.mcp-starrocks  Dockerfile.mongo  Dockerfile.postgres  Dockerfile.starrocks  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements-jobs.txt  requirements-mongo.txt  requirements-starrocks.txt  requirements-test.txt  requirements.txt  ruff.toml  run_query.py  sdb.py  sdp.py  setup.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/demo/: WELCOME.md  docker-compose.override.yml  env.template
.github/workflows/: ruff.yml  shellcheck.yml  tests.yml
config/: setup_state.yaml
config/db/: mcp.yaml  mongo.yaml
config/jobs/: config.yaml  entrypoint.sh
config/mcp/: entrypoint-mongo.sh  entrypoint-postgres.sh  entrypoint-starrocks.sh  mongo-mcp-maxtimems.patch  mongo-mcp-readonly.patch
config/ml/: gpu_classifiers.yaml  pipeline.yaml  user.yaml.example
config/ml_cpu/: pipeline.yaml
config/mongo/: entrypoint-wrapper.sh  healthcheck.sh  mongod.conf  pipeline.yaml  user.yaml.example
config/parse/: pipeline.yaml
config/postgres/: entrypoint-wrapper.sh  healthcheck.sh  pipeline.yaml  postgresql.conf  services.yaml  user.yaml.example
config/postgres_ml/: pipeline.yaml  (+2 more)
docs/: configuration.md
reddit_data_tools/: __init__.py
social_data_bridge/: __init__.py
social_data_pipeline/: __init__.py
tests/: agentic_mcp.md  conftest.py  test_cli_db_start.py  test_cli_help.py
(+200 files in other folders)
